err/furious.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/furious'...
Listing './lib/python3.5/site-packages/furious/context'...
Listing './lib/python3.5/site-packages/furious/extras'...
Listing './lib/python3.5/site-packages/furious/extras/appengine'...
Listing './lib/python3.5/site-packages/furious/handlers'...
Compiling './lib/python3.5/site-packages/furious/processors.py'...
***   File "./lib/python3.5/site-packages/furious/processors.py", line 125
    raise async.result.payload.exception, None, \
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/furious/test_stubs'...
Listing './lib/python3.5/site-packages/furious/test_stubs/appengine'...
Compiling './lib/python3.5/site-packages/furious/test_stubs/appengine/queues.py'...
***   File "./lib/python3.5/site-packages/furious/test_stubs/appengine/queues.py", line 434
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/furious/tests'...
Listing './lib/python3.5/site-packages/furious/tests/context'...
Listing './lib/python3.5/site-packages/furious/tests/dummy_module'...
Listing './lib/python3.5/site-packages/furious/tests/extras'...
Listing './lib/python3.5/site-packages/furious/tests/extras/appengine'...
Compiling './lib/python3.5/site-packages/furious/tests/extras/appengine/test_ndb_persistence.py'...
***   File "./lib/python3.5/site-packages/furious/tests/extras/appengine/test_ndb_persistence.py", line 172
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/furious/tests/handlers'...
Compiling './lib/python3.5/site-packages/furious/tests/test_processors.py'...
***   File "./lib/python3.5/site-packages/furious/tests/test_processors.py", line 462
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/furious/tests/test_stubs'...
Listing './lib/python3.5/site-packages/furious/tests/test_stubs/appengine'...
Listing './lib/python3.5/site-packages/furious-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
